[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
anyhow = "1.0.95"
log = "0.4.25"
network = { path = "../network" }
simple_db = { path = "../simple_db" }
env_logger = "0.11.6"
bincode = "1.3.3"
once_cell = "1.20.2"
omnipaxos = { version = "0.2.2", features = ["serde", "macros"] }
omnipaxos_storage = "0.2.2"
serde = "1.0.217"
futures = "0.3.31"
uuid = "1.12.1"
toml = "0.8.20"
